# Solana_Name_Service

./: Anchor.toml  Cargo.toml  README  README.md  package-lock.json  package.json  rust-project.json  turbo.json
apps/anchor-app/programs/solana_name_service/: Cargo.toml
apps/anchor-app/programs/solana_name_service/src/: lib.rs
apps/anchor-app/programs/solana_name_service/src/instructions/: close_domain.rs
apps/sns-frontend/: package.json  tsconfig.json
apps/sns-frontend/src/app/: layout.tsx  page.tsx
apps/solana_program/: package.json  tsconfig.json
apps/solana_program/programs/solana_name_service/: Cargo.toml
apps/solana_program/programs/solana_name_service/src/: lib.rs  state.rs
apps/solana_program/programs/solana_name_service/src/instructions/: add_domain.rs  close_domain.rs  extend_domain_validity.rs  get_domain.rs  mod.rs  transfer_domain.rs  update_domain.rs
apps/solana_program/programs/solana_name_service/src/types/: errors.rs  mod.rs  plan.rs
apps/solana_program/tests/: solana_name_service.ts
programs/solana_name_service/: Cargo.toml
programs/solana_name_service/src/: lib.rs
programs/solana_name_service/src/instructions/: add_domain.rs  get_domain.rs
sns_frontend/: package-lock.json  package.json
sns_frontend/src/app/Components/: ConnectWalletButton.tsx
sns_frontend/src/app/Context/: WalletContext.tsx
tests/: solana_name_service.ts
